# ForStudy

EdgeDetectionForColorImage/: CMakeLists.txt  ColorEdge.cpp  ColorEdge.h  Readme.txt  main.cpp
EdgeDetectionForColorImage/src/: CMakeLists.txt  ColorEdge.cpp  ColorEdge.h  main.cpp
LOF/: CMakeLists.txt  Lof.cpp  Lof.h  README  main.cpp
